--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "little tiers",
   "main": "http_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install",
+    "start": "node http_server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,8 @@
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "lowdb": "^1.0.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
